force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/AcctSeed__Billing_Line__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Line</label>
    <referenceTo>AcctSeed__Billing_Line__c</referenceTo>
    <relationshipLabel>Time Card Days</relationshipLabel>
    <relationshipName>Time_Card_Days</relationshipName>
    <type>Lookup</type>
</CustomField>