force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/AcctSeed__Employee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Employee__c</fullName>
    <formula>AcctSeed__Time_Card_Line__r.AcctSeed__Time_Card__r.AcctSeed__Employee__r.FirstName &amp; &quot; &quot; &amp;  AcctSeed__Time_Card_Line__r.AcctSeed__Time_Card__r.AcctSeed__Employee__r.LastName</formula>
    <inlineHelpText>Formula Field to display parent Time Card. Used for Reporting.</inlineHelpText>
    <label>Employee</label>
    <type>Text</type>
</CustomField>