force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/AcctSeed__Hours__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Hours__c</fullName>
    <label>Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>