force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/AcctSeed__Internal_Comment__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Internal_Comment__c</fullName>
    <inlineHelpText>Used to record comments for internal communication within your organization. These comments are not seen by customers.</inlineHelpText>
    <label>Internal Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>