force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/AcctSeed__Utilization_Category__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Utilization_Category__c</fullName>
    <formula>Text(AcctSeed__Time_Card_Line__r.AcctSeed__Project_Task__r.AcctSeed__Utilization_Category__c)</formula>
    <label>Utilization Category</label>
    <type>Text</type>
</CustomField>