force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/Burden__c.field-meta.xml
<CustomField>
    <fullName>Burden__c</fullName>
    <formula>AcctSeed__Time_Card_Line__r.AcctSeed__Time_Card__r.Burden__c * AcctSeed__Hours__c
/*IF(
OR(
AcctSeed__Time_Card_Line__r.AcctSeed__Project_Task__r.AcctSeed__GL_Account_Variable_3__r.Uniquefier__c = &apos;Holiday&apos;,
AcctSeed__Time_Card_Line__r.AcctSeed__Project_Task__r.AcctSeed__GL_Account_Variable_3__r.Uniquefier__c = &apos;Medical&apos;,
AcctSeed__Time_Card_Line__r.AcctSeed__Project_Task__r.AcctSeed__GL_Account_Variable_3__r.Uniquefier__c = &apos;Vacation&apos;),
0,
AcctSeed__Time_Card_Line__r.AcctSeed__Time_Card__r.Burden__c * AcctSeed__Hours__c)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burden</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>