force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/Hours_DT__c.field-meta.xml
<CustomField>
    <fullName>Hours_DT__c</fullName>
    <inlineHelpText>Hours of Double Time</inlineHelpText>
    <label>Hours DT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>