force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/Is_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Is_Bulk__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checkbox is checked, the value in the Hours field is NOT determined by roll-up of underlying Time Card Entries.</inlineHelpText>
    <label>Is Bulk</label>
    <type>Checkbox</type>
</CustomField>