force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/Time_Card_Entry_Count__c.field-meta.xml
<CustomField>
    <fullName>Time_Card_Entry_Count__c</fullName>
    <label>Time Card Entry Count</label>
    <summaryForeignKey>Time_Card_Entry__c.Time_Card_Day__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>