force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/Uniquefier__c.field-meta.xml
<CustomField>
    <fullName>Uniquefier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Uniquefier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>