force-app/main/default/objects/AcctSeed__Time_Card_Day__c/fields/Wages__c.field-meta.xml
<CustomField>
    <fullName>Wages__c</fullName>
    <formula>AcctSeed__Time_Card_Line__r.Wage_RT__c *  Hours_RT__c +
AcctSeed__Time_Card_Line__r.Wage_OT__c *  Hours_OT__c +
AcctSeed__Time_Card_Line__r.Wage_DT__c *  Hours_DT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>